[gd_scene load_steps=4 format=3 uid="uid://cx0wskdfm3lgi"]

[ext_resource type="Script" path="res://Scripts/UILayer.gd" id="1_cj8wg"]
[ext_resource type="Texture2D" uid="uid://1heeyertpfof" path="res://Images/Chia/player mug test sprite.png" id="2_0qre0"]
[ext_resource type="Texture2D" uid="uid://ccrji5m82xkur" path="res://Images/sr2e72fbd0562aws3.png" id="2_lab18"]

[node name="UILayer" type="CanvasLayer"]
script = ExtResource("1_cj8wg")

[node name="DialogueBox" type="Panel" parent="."]
custom_minimum_size = Vector2(0, 150)
anchors_preset = -1
anchor_left = 0.000527779
anchor_top = 0.00432102
anchor_right = 0.248591
anchor_bottom = 0.828914
offset_left = 0.391998
offset_top = 0.199982
offset_right = -0.376465
offset_bottom = -0.136017
grow_horizontal = 2
grow_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="DialogueLabel" type="Label" parent="DialogueBox"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.17402
anchor_top = 0.0666667
anchor_right = 0.974265
anchor_bottom = 0.766667
offset_right = 14.0
offset_bottom = 23.0
text = "\"\""
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-396, 539)
texture = ExtResource("2_0qre0")

[node name="InventoryPanel" type="Panel" parent="."]
custom_minimum_size = Vector2(200, 60)
anchors_preset = -1
anchor_top = 0.907407
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="InventoryGrid" type="GridContainer" parent="InventoryPanel"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 10
columns = 3
metadata/_edit_use_anchors_ = true

[node name="ArrowButtonToHunting" type="TextureButton" parent="."]
visible = false
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -52.0
offset_right = 127.0
offset_bottom = 52.0
grow_vertical = 2
texture_normal = ExtResource("2_lab18")
ignore_texture_size = true
stretch_mode = 0
flip_h = true

[node name="ArrowButtonToGlyph" type="TextureButton" parent="."]
visible = false
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -127.0
offset_top = -52.0
offset_bottom = 52.0
grow_horizontal = 0
grow_vertical = 2
texture_normal = ExtResource("2_lab18")
ignore_texture_size = true
stretch_mode = 0

[node name="ArrowButtonToChia" type="TextureButton" parent="."]
visible = false
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -127.0
offset_top = -52.0
offset_bottom = 52.0
grow_horizontal = 0
grow_vertical = 2
texture_normal = ExtResource("2_lab18")
ignore_texture_size = true
stretch_mode = 0

[node name="ArrowButtonToChiaFromGlyph" type="TextureButton" parent="."]
visible = false
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -52.0
offset_right = 127.0
offset_bottom = 52.0
grow_vertical = 2
texture_normal = ExtResource("2_lab18")
ignore_texture_size = true
stretch_mode = 0
flip_h = true

[node name="DescriptionBox" type="Panel" parent="."]
custom_minimum_size = Vector2(0, 30)
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1.0
offset_top = -91.0
offset_right = -1.0
offset_bottom = -61.0
grow_horizontal = 2
grow_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="DescriptionLabel" type="Label" parent="DescriptionBox"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.306858
anchor_top = 1.0
anchor_right = 0.681858
anchor_bottom = 1.0
offset_left = -0.5
offset_top = -23.0
offset_right = 0.5
grow_horizontal = 2
grow_vertical = 0
text = "ff"
horizontal_alignment = 1
autowrap_mode = 2
metadata/_edit_use_anchors_ = true

[node name="Panel" type="Panel" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[connection signal="pressed" from="ArrowButtonToHunting" to="." method="_on_arrow_button_to_hunting_pressed"]
[connection signal="pressed" from="ArrowButtonToGlyph" to="." method="_on_arrow_button_to_glyph_pressed"]
[connection signal="pressed" from="ArrowButtonToChia" to="." method="_on_arrow_button_to_chia_pressed"]
[connection signal="pressed" from="ArrowButtonToChiaFromGlyph" to="." method="_on_arrow_button_to_chia_from_glyph_pressed"]
